Fixed Text Overflow issue in Detail Component

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,6 @@ a{
 a > h6{
     color: white;
 }
+p{
+    overflow-wrap: anywhere;
+}
